--- a/publications.bib
+++ b/publications.bib
@@ -233,3 +233,16 @@
   doi = {10.1021/ja3055639},
   url = {http://doi.org/10.1021/ja3055639},
 }
+@article{Nezbeda_1991,
+	doi = {10.1080/08927029108022424},
+	url = {https://doi.org/10.1080%2F08927029108022424},
+	year = 1991,
+	month = {feb},
+	publisher = {Informa {UK} Limited},
+	volume = {5},
+	number = {6},
+	pages = {391--403},
+	author = {Ivo Nezbeda and Ji{\v{r}}{\'{\i}} Kolafa},
+	title = {A New Version of the Insertion Particle Method for Determining the Chemical Potential by Monte Carlo Simulation},
+	journal = {Molecular Simulation}
+}
