--- a/main.tex
+++ b/main.tex
@@ -328,6 +328,10 @@
 %\def\MLPl{\mbox{MLP(liquid)}\xspace}
 %\def\MLPc{\mbox{MLP(crystal)}\xspace}
 
+\newcommand{\dd}{
+      \mathop{}\mathopen{}\mathrm{d}
+   }
+   
 \newcommand{\todo}[1]{\textcolor{blue}{[#1]}}
 \newcommand{\final}[1]{\textcolor{green}{[#1]}} % final edit
 \newcommand{\bonus}[1]{\textcolor{violet}{[#1]}} % final edit
