--- a/1-screening.tex
+++ b/1-screening.tex
@@ -29,7 +29,7 @@ The pore volume consists in the measure of the volume of ``closed'' and ``open''
 \begin{figure}[ht]
   \centering
   \includegraphics[width=0.7\textwidth]{figures/1-screening/Pore_descriptors.jpg}
-  \caption{Illustration of the pore surface area and volume in a nanoporous material. As illustrated, there are different definitions of the pore volume: we can either consider the whole volume of the pores or the volume occupiable by a given probe. The surface area also changes depending on the definition. Studies have shown that occupiable volume has a better accordance with experimental data.\cite{vol_Ongari2017}}\label{fgr:pores}
+  \caption{\ Illustration of the pore surface area and volume in a nanoporous material. As illustrated, there are different definitions of the pore volume: we can either consider the whole volume of the pores or the volume occupiable by a given probe. The surface area also changes depending on the definition. Studies have shown that occupiable volume has a better accordance with experimental data.\cite{vol_Ongari2017}}\label{fgr:pores}
 \end{figure}
 
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
@@ -44,7 +44,7 @@ Beyond the experimental techniques, some software like Zeo++ or PoreBlazer focus
   \includegraphics[height=0.23\textwidth]{figures/1-screening/FER.jpg}
   \includegraphics[height=0.23\textwidth]{figures/1-screening/COF-5.jpg}
   \includegraphics[height=0.23\textwidth]{figures/1-screening/SBMOF-1.jpg}
-  \caption{Illustration of a zeolite FER\cite{FER}, a COF\cite{Cote_2005} and a MOF\cite{KAXQIL}. Color code: brown for C, white for H, red for O, blue for Si, cyan for Ca, yellow for S and green for B.}
+  \caption{\ Illustration of a zeolite FER\cite{FER}, a COF\cite{Cote_2005} and a MOF\cite{KAXQIL}. Color code: brown for C, white for H, red for O, blue for Si, cyan for Ca, yellow for S and green for B.}
 \end{figure}
 
 %Material classification crystalline / amorphous
@@ -83,7 +83,7 @@ To overcome these new challenges, people are looking increasingly towards transf
 \begin{figure*}[t]
     \centering
       \includegraphics[width=0.98\textwidth]{figures/1-screening/Screening_procedures.jpg}
-      \caption{Simplified representation of typical funnel-type screening procedures, exemplified on three different applications from the published literature. (a) Wilmer et al.\cite{Wilmer_2012} used a series of bi-component Grand Canonical Monte Carlo (GCMC) calculations at different levels of complexity to screen a large dataset of hypothetical MOFs for methane storage application. (b) Yang et al.\cite{Yang_2020} used simulations at infinite dilution to prescreen the dataset before using computationally demanding simulations and multiple metrics to find the most promising ZIFs for carbon capture. (c) In Qiao et al.\cite{Qiao_2016}, transport properties were screened along standard adsorption properties to find the best materials for the targeted \ce{CO2}/\ce{N2}/\ce{CH4} ternary separation; similarly, cheaper calculations at infinite dilution were carried out in a first step, before using more expensive calculations at working pressure and temperature.}\label{fgr:screening}
+      \caption{\ Simplified representation of typical funnel-type screening procedures, exemplified on three different applications from the published literature. (a) Wilmer et al.\cite{Wilmer_2012} used a series of bi-component Grand Canonical Monte Carlo (GCMC) calculations at different levels of complexity to screen a large dataset of hypothetical MOFs for methane storage application. (b) Yang et al.\cite{Yang_2020} used simulations at infinite dilution to prescreen the dataset before using computationally demanding simulations and multiple metrics to find the most promising ZIFs for carbon capture. (c) In Qiao et al.\cite{Qiao_2016}, transport properties were screened along standard adsorption properties to find the best materials for the targeted \ce{CO2}/\ce{N2}/\ce{CH4} ternary separation; similarly, cheaper calculations at infinite dilution were carried out in a first step, before using more expensive calculations at working pressure and temperature.}\label{fgr:screening}
     \end{figure*}
 
 
@@ -109,7 +109,7 @@ Using a screening on these descriptors, three structures were identified as prom
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.8\linewidth]{figures/1-screening/Rosen_2019.jpeg}
-  \caption{Analysis of a diverse set of experimentally derived metal--organic frameworks (MOFs) with accessible metal sites for the oxidative activation of methane. The graph shows the predicted barrier for the C--H bond activation of methane, E$_\text{a}$, as a function of the metal-oxo formation energy, $\Delta E_\text{O}$. For each material, the symbol color refers to the group number of the metal in the periodic table. The best-fit line has is plotted in black, and has a mean absolute error (MAE) of \SI{0.09}{\eV}. MOFs with E$_\text{a}<$ \SI{1}{\eV} are classified as being reactive towards C--H bond activation and MOFs with $\Delta E_\text{O}<0$ as having thermodynamically favored active sites when using \ce{O2} as the reference state. Reprinted with permission from Ref.~\citenum{Rosen_2019}. Copyright 2019 American Chemical Society.}
+  \caption{\ Analysis of a diverse set of experimentally derived metal--organic frameworks (MOFs) with accessible metal sites for the oxidative activation of methane. The graph shows the predicted barrier for the C--H bond activation of methane, E$_\text{a}$, as a function of the metal-oxo formation energy, $\Delta E_\text{O}$. For each material, the symbol color refers to the group number of the metal in the periodic table. The best-fit line has is plotted in black, and has a mean absolute error (MAE) of \SI{0.09}{\eV}. MOFs with E$_\text{a}<$ \SI{1}{\eV} are classified as being reactive towards C--H bond activation and MOFs with $\Delta E_\text{O}<0$ as having thermodynamically favored active sites when using \ce{O2} as the reference state. Reprinted with permission from Ref.~\citenum{Rosen_2019}. Copyright 2019 American Chemical Society.}
   \label{fgr:Rosen_2019}
 \end{figure}
 
@@ -133,7 +133,7 @@ Firstly, the exploration of the database of elastic properties by tensorial anal
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.8\linewidth]{figures/1-screening/deJong2015.jpeg}
-  \caption{Statistical analysis of the calculated volume per atom, Poisson's ratio, bulk modulus {$\mathrm{K_{VRH}}$} and shear modulus {$\mathrm{G_{VRH}}$ of} 1,181 compounds in the Materials Project database. In the vector field-plot, arrows pointing at 12 o'clock correspond to minimum volume-per-atom and move anti-clockwise in the direction of maximum volume-per-atom, which is located at 6 o'clock. Reprinted from Ref.~\citenum{deJong_2015} under CC-BY license. Copyright 2015 de Jong \emph{et al}.}
+  \caption{\ Statistical analysis of the calculated volume per atom, Poisson's ratio, bulk modulus {$\mathrm{K_{VRH}}$} and shear modulus {$\mathrm{G_{VRH}}$ of} 1,181 compounds in the Materials Project database. In the vector field-plot, arrows pointing at 12 o'clock correspond to minimum volume-per-atom and move anti-clockwise in the direction of maximum volume-per-atom, which is located at 6 o'clock. Reprinted from Ref.~\citenum{deJong_2015} under CC-BY license. Copyright 2015 de Jong \emph{et al}.}
   \label{fgr:deJong2015}
 \end{figure}
 
@@ -163,7 +163,7 @@ As illustrated in Figure \ref{fgr:Haldoupis_2010}, they found a clear dependence
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.7\linewidth]{figures/1-screening/Haldoupis_2010.jpeg}
-  \caption{Calculated energy barrier for the diffusion of \ce{CH4} in 216 metal--organic frameworks (MOFs), shown as a function of the pore-limiting diameter. The solid lines represent statistical upper and lower bounds on the energy barrier, in a transition state theory approach. Reprinted with permission from Ref.~\citenum{Haldoupis_2010}. Copyright 2010 American Chemical Society.}
+  \caption{\ Calculated energy barrier for the diffusion of \ce{CH4} in 216 metal--organic frameworks (MOFs), shown as a function of the pore-limiting diameter. The solid lines represent statistical upper and lower bounds on the energy barrier, in a transition state theory approach. Reprinted with permission from Ref.~\citenum{Haldoupis_2010}. Copyright 2010 American Chemical Society.}
   \label{fgr:Haldoupis_2010}
 \end{figure}
 
@@ -186,7 +186,7 @@ Altintas and Keskin later performed a screening on the same database for \ce{CO2
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.5\linewidth]{figures/1-screening/Altintas_2018.jpeg}
-  \caption{Selectivity and permeability of metal--organic framework (MOF) membranes for \ce{CO2}/\ce{CH4} separation computed at infinite dilution by combining Grand Canonical Monte Carlo and molecular dynamics simulations.\cite{Altintas_2018} The black solid line represents the Robeson's upper bound.\cite{robeson1991correlation, Robeson_2008} MOFs that can exceed the bound are shown in blue, and the 8 top-performing MOF membranes are shown with red symbols. Reprinted with permission from Ref.~\citenum{Altintas_2018}. Copyright 2018 American Chemical Society.}
+  \caption{\ Selectivity and permeability of metal--organic framework (MOF) membranes for \ce{CO2}/\ce{CH4} separation computed at infinite dilution by combining Grand Canonical Monte Carlo and molecular dynamics simulations.\cite{Altintas_2018} The black solid line represents the Robeson's upper bound.\cite{robeson1991correlation, Robeson_2008} MOFs that can exceed the bound are shown in blue, and the 8 top-performing MOF membranes are shown with red symbols. Reprinted with permission from Ref.~\citenum{Altintas_2018}. Copyright 2018 American Chemical Society.}
   \label{fgr:Altintas_2018}
 \end{figure}
 
@@ -205,7 +205,7 @@ One of the pioneering works in computational screening was published in 2012 by 
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.5\linewidth]{figures/1-screening/Fernandez_2013_feature.jpeg}
-  \caption{Two-dimensional response surfaces of the support vector machine (SVM) models trained by Fernandez et al.\ for methane storage at (A) 35~bar and (B) 100~bar using void fraction and dominant pore size. The blue dots represent the GCMC simulated uptake values. The color of the surface represents the methane storage value, from blue (the lowest values) to red (the highest values). Blue and red arrows indicate maxima on the response surface. Reprinted with permission from Ref.~\citenum{Fernandez_2013}. Copyright 2013 American Chemical Society.}
+  \caption{\ Two-dimensional response surfaces of the support vector machine (SVM) models trained by Fernandez et al.\ for methane storage at (A) 35~bar and (B) 100~bar using void fraction and dominant pore size. The blue dots represent the GCMC simulated uptake values. The color of the surface represents the methane storage value, from blue (the lowest values) to red (the highest values). Blue and red arrows indicate maxima on the response surface. Reprinted with permission from Ref.~\citenum{Fernandez_2013}. Copyright 2013 American Chemical Society.}
   \label{fgr:Fernandez_2013}
 \end{figure}
 
@@ -248,7 +248,7 @@ Seizing the opportunity of a formidable expansion of the nanoporous materials da
 \begin{figure}[ht]
 \centering
   \includegraphics[width=0.7\linewidth]{figures/1-screening/Simon_2015_descriptors.jpeg}
-  \caption{Statistical analysis of the adsorption separation of xenon/krypton mixtures by nanoporous materials. The graphs represent the distributions of structural descriptors explored by highly selective (green) and poorly selective (red) materials separately. Reprinted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.}
+  \caption{\ Statistical analysis of the adsorption separation of xenon/krypton mixtures by nanoporous materials. The graphs represent the distributions of structural descriptors explored by highly selective (green) and poorly selective (red) materials separately. Reprinted with permission from Ref.~\citenum{Simon_2015}. Copyright 2015 American Chemical Society.}
   \label{fgr:Simon2015}
 \end{figure}
 
@@ -273,7 +273,7 @@ The role of a dispatchable source of low-carbon energy can only be fulfilled by 
 \begin{figure}[ht]
   \includegraphics[width=0.49\textwidth]{figures/1-screening/Kr_treatment.jpg}
   \includegraphics[width=0.49\textwidth]{figures/1-screening/MSR_noble_gas.jpg}
-  \caption{Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from reference \citenum{Banerjee_2014} copyright \copyright (2014) American Chemical Society and reference \citenum{Riley_2019} copyright \copyright (2019) Elsevier.}
+  \caption{\ Representation of xenon/krypton separation process using porous materials in a nuclear fuel reprocessing plant and in a molten salt reactor. Reprinted with permission from reference \citenum{Banerjee_2014} copyright \copyright (2014) American Chemical Society and reference \citenum{Riley_2019} copyright \copyright (2019) Elsevier.}
   \label{fgr:industrial}
 \end{figure}
 
